tests/sksl/errors/ReservedNameSampler2DShadow.glsl
### Compilation failed:

error: 1: 'sampler2DShadow' is a reserved word
1 error
